Download Button Removed, Home Screen Created, Alignment with Backend Complete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="inner">
         <div class="logo center-div">
          
-          <div style="color: rgb(255, 255, 255); font-size: 25pt;">
+          <div style="color: rgb(255, 255, 255); font-size: 25pt; min-width: 400px">
             Server
             <img 
               src="src/assets/LogoServer.png"
